--- a/k/gr.1/gr.1.csproj
+++ b/k/gr.1/gr.1.csproj
@@ -11,6 +11,8 @@
     <RootNamespace>gr._1</RootNamespace>
     <AssemblyName>gr.1</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <StartupObject>gr._1.Program</StartupObject>
+    <CodePage>65001</CodePage>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
